buildscript {
    dependencies {
        classpath 'com.h2database:h2:1.4.197'
    }
}

plugins {
	id 'org.springframework.boot' version '2.2.4.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id "org.flywaydb.flyway" version "6.2.3"
	id 'java'
	id "io.freefair.lombok" version "4.1.6"
	id 'com.github.sherter.google-java-format' version '0.8'
}

group = 'com.exelaration'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation('org.postgresql:postgresql')
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
	testImplementation 'org.springframework.security:spring-security-test'
	compile 'org.flywaydb:flyway-core:6.2.3'
	testCompile("org.flywaydb.flyway-test-extensions:flyway-spring-test:6.1.0")
	testRuntime('org.flywaydb:flyway-core:6.2.3')
}


flyway {
    url = 'jdbc:h2://database/postgres'
    user = 'postgres'
}

test {
	useJUnitPlatform()
}
